test/errors/circular-dependencies-two/packages/library-ui/index.ts
export * from '@library-cirulcar-dependencies-two/ui/src/library.module';
export * from '@library-cirulcar-dependencies-two/ui/src/input/input.component';
